--- a/demo/demo.html
+++ b/demo/demo.html
@@ -2,19 +2,45 @@
 <html>
 <head>
     <title></title>
-    <style></style>
+    <style>
+        body{
+            background-color: #fafafa;
+            padding: 0 40px;
+        }
+        .wrapper{
+            background-color: #ffffff;
+            border: 1px solid #e3e0e0;
+            margin-bottom: 80px;
+        }
+        .wrapper-title{
+            font-size: 18px;
+            font-weight: 600;
+            padding:15px 20px;
+            border-bottom: 1px solid #e3e0e0;
+        }
+        .wrapper-content{
+            background-color: #fafafa;
+            min-height: 40px;
+            margin: 20px;
+            overflow: auto;
+        }
+    </style>
 </head>
 <body>
-<div id="a"></div>
-<div id="b"></div>
-<div id="c"></div>
-<div id="d"></div>
-<div id="e"></div>
-<div id="f"></div>
+    <div class="wrapper">
+        <div class="wrapper-title">标题</div>
+        <div class="wrapper-content">
+            <!-- 内容 -->
+        </div>
+    </div>
+    <div class="wrapper">
+        <div class="wrapper-title">标题</div>
+        <div class="wrapper-content">
+            <div id="a"></div>
+        </div>
+    </div>
 </body>
-<div></div>
 
 <script>
-    let a = document.querySelector("#a").innerText="aaa";
 </script>
 </html>
