--- a/基础/HTML/h5-1.html
+++ b/基础/HTML/h5-1.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8" />
     <meta name="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0, user-scalable=0" />
+    <!-- 小于600px时使用此样式 -->
     <link rel="stylesheet" href="./h5-1.css" type="text/css" media="screen and (max-width: 600px)"/>
     <title>review</title>
     <style></style>
@@ -19,9 +20,11 @@
 <div id="e"></div>
 <div id="f"></div>
 <a href="./ff"></a>
+<div><img src="../assert/cache1.png"/></div>
+
 </body>
 <div></div>
-
+<script src="./h5-1.js"></script>
 <script>
     let a = document.querySelector("#a").innerText="aaa";
 </script>
